=================
Changes for Crate
=================

Unreleased
==========

 - improved speed of Alter table settings in partitioned tables

2014/12/22 0.46.1
=================

 - Fixed broken COPY FROM/TO S3 caused by missing depencenies

 - Updated crate-admin to 0.11.1 which includes following changes:

   - Fixed title of `tables` view if no tables exists or connection is
     down

 - Fixed an issue that could cause bulk inserts to get stalled.

2014/12/17 0.46.0
=================

 - Add support for user-defined schemas.

 - Changed output of column names in error messages to subscript notation,
   so the correct notation to address columns in sql is reflected

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - implemented table ``information_schema.schemata`` with column ``schema_name``
   listing all available schemas

 - Array types are now fully supported in dynamic schemas. Note that
   Crate performs an internal migration, therefore downgrading to an
   older version is not supported

 - Updated Elasticsearch to 1.4.1

 - Improve performance of regex functions by actually
   pre-compiling their used patterns (if given as literal)

 - Add sql query breaker which will terminate a query execution if too
   much memory will be consumed.

 - Use flake ids for interal id generation

 - Added Support for Column Policies, which can be used to define if a
   table enforces its defined schema or if it's allowed to store
   additional columns which are not defined in the schema.

 - Throw an error while using unknown root columns on SELECT

2014/12/16 0.45.6
=================

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Added comments to the logging.yml config file and reduced the