@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - fix: throw correct exception if one uses `_version` without primary key
+   in a select statements where clause
+
  - improved speed of Alter table settings in partitioned tables
 
 2014/12/22 0.46.1
